docs/en/7.5/api/push.md
#Push
<div class="btn-group"><a href="#Methods" class="btn btn-outline-secondary">Methods<span class="badge badge-secondary ml-3">11</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><h6 class="dropdown-header">Methods - Class</h6>
<a href="#menumerateSTATIC" data-target="cMethodenumerate" class="dropdown-item">enumerate</a><a href="#mgetDefaultSTATIC" data-target="cMethodgetDefault" class="dropdown-item">getDefault</a><a href="#msetDefaultSTATIC" data-target="cMethodsetDefault" class="dropdown-item">setDefault</a><h6 class="dropdown-header">Methods - Instance</h6>
<a href="#mgetAllProperties" data-target="cMethodgetAllProperties" class="dropdown-item">getAllProperties</a><a href="#mgetDeviceIdINSTANCE" data-target="cMethodgetDeviceId" class="dropdown-item">getDeviceId</a><a href="#mgetProperties" data-target="cMethodgetProperties" class="dropdown-item">getProperties</a><a href="#mgetProperty" data-target="cMethodgetProperty" class="dropdown-item">getProperty</a><a href="#msetProperties" data-target="cMethodsetProperties" class="dropdown-item">setProperties</a><a href="#msetProperty" data-target="cMethodsetProperty" class="dropdown-item">setProperty</a><a href="#mstartNotificationsINSTANCE" data-target="cMethodstartNotifications" class="dropdown-item">startNotifications</a><a href="#mstopNotificationsINSTANCE" data-target="cMethodstopNotifications" class="dropdown-item">stopNotifications</a></div></div><div class="btn-group"><a href="#Properties" class="btn btn-outline-secondary">Properties<span class="badge badge-secondary ml-3">4</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><h6 class="dropdown-header">Instance Properties</h6>
<a href="#ppushAppName" data-target="cPropertypushAppName" class="dropdown-item">pushAppName</a><a href="#ppushServer" data-target="cPropertypushServer" class="dropdown-item">pushServer</a><a href="#ptype" data-target="cPropertytype" class="dropdown-item">type</a><a href="#puserNotifyMode" data-target="cPropertyuserNotifyMode" class="dropdown-item">userNotifyMode</a></div></div><div class="btn-group"><a href="#Examples" class="btn btn-outline-secondary">Examples<span class="badge badge-secondary ml-3">1</span></a><button type="button" class="btn btn-outline-secondary dropdown-toggle dropdown-toggle-split" id="dropdownMenuReference" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-reference="parent"></button><div class="dropdown-menu" style="max-height: 500px;overflow: auto;"><a href="#e0" data-target="eExample0" class="dropdown-item">Handle push message</a></div></div><div id="apibody" class="mt-3">
<p>The Push API provides access to Push messaging functionality. Use this API to give your application the ability to receive server initiated messages.</p>
<h2>Enabling the API</h2>

<p>To use this API, you must include the following extension in your <code>build.yml</code>:</p>

<p>For APNS:
    :::ruby
    capabilities: [&ldquo;push&rdquo;]</p>

<p>For FCM:
    :::ruby
    capabilities: [&ldquo;push&rdquo;]
    extensions: [&ldquo;fcm-push&rdquo;]
    fcmSenderID: &lsquo;your_fcm_sender_id&rsquo;
    fcmAppID: &lsquo;your_fcm_app_id&rsquo;</p>

<p><strong>Supporting FCM Push on iOS</strong> Download GoogleService-Info.plist and put it into the root of your application. Please read guide <a href="https://firebase.google.com/docs/ios/setup">Add Firebase to your iOS project</a> for more details.</p>

<p>For GCM ( NB: GCM is deprecated, we recommend using FCM push ):
    :::ruby
    capabilities: [&ldquo;push&rdquo;]
    extensions: [&ldquo;gcm-push&rdquo;]</p>

<p>For RhoConnect Push Service:
    :::ruby
    extensions: [&ldquo;rhoconnect-push&rdquo;, &ldquo;rhoconnect-client&rdquo;]</p>

<p><strong>NOTES</strong></p>

<p><strong>For Win32(XPE)</strong>, Microsoft Message Queue (MSMQ) and .Net Framework 3.5 also must be installed on the device.</p>

<p><strong>GCM is no longer supported as a standalone jar file</strong> since being moved to Google Play services. If you have trouble building an Android app with RhoElements 4.0.0 and Push capability, try these steps:</p>

<ol>
<li><a href="http://dl-ssl.google.com/android/repository/gcm_r03.zip">Download the GCM r03 sip file</a> from Google&rsquo;s repository.</li>
<li>Copy it to sdk/extras and extract it.</li>
<li>Rename the folder to &lsquo;gcm&rsquo;</li>
</ol>


<h2>JavaScript Usage</h2>

<p>Be sure to review the <a href="/guide/api_js">JavaScript API Usage</a> guide for important information about using this API in JavaScript.</p>

<h2>Ruby Usage</h2>

<p>Be sure to review the <a href="/guide/api_ruby">Ruby API Usage</a> guide for important information about using this API in Ruby.</p>


<a name='Methods'></a>
<h2>Methods</h2>

<div class="accordion" id="accordion"><a name ='menumerateSTATIC'/><div class=' method  js ruby android ios' id='menumerateSTATIC'><div class="signature d-flex"><div class="name">enumerate</div><div class='parameters'>(<span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#menumerateSTATIC1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#menumerateSTATIC2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#menumerateSTATIC3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#menumerateSTATIC4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#menumerateSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-enumerateSTATIC'><div class="tab-pane fade active show" id="menumerateSTATIC1"><p>Returns the push API objects configured within the application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="menumerateSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>ARRAY</span></strong></p><ul><ul><li><i>Object<i> : <span class='text-info'>SELF_INSTANCE: Push</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>ARRAY : <p>Array of available push engines.</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li><i>Object<i> : <span class='text-info'>SELF_INSTANCE: Push</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="menumerateSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Push.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.enumerate(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetAllProperties'/><div class=' method  js ruby android ios' id='mgetAllProperties'><div class="signature d-flex"><div class="name">getAllProperties</div><div class='parameters'>(<span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mgetAllProperties1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mgetAllProperties2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mgetAllProperties3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mgetAllProperties4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mgetAllProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-getAllProperties'><div class="tab-pane fade active show" id="mgetAllProperties1"><p>This method will return all of object/value pairs for the propertyNames of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetAllProperties2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetAllProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of all available properties</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetAllProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.getAllProperties(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDefaultSTATIC'/><div class=' method  js ruby android ios' id='mgetDefaultSTATIC'><div class="signature d-flex"><div class="name">getDefault</div><div class='parameters'>()</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mgetDefaultSTATIC1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDefaultSTATIC4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-getDefaultSTATIC'><div class="tab-pane fade active show" id="mgetDefaultSTATIC1"><p>This method will return an object that represents the default instance of the API Class. For example Camera.getDefault will return a Camera object that represents the default camera.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetDefaultSTATIC2"></div><div class="tab-pane fade" id="mgetDefaultSTATIC3"></div><div class="tab-pane fade" id="mgetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>SELF_INSTANCE : <p>Default object of Module.</p>
</li></ul></div></div><div class="tab-pane fade" id="mgetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Push.getDefault()</code> </li><li>Ruby: <code>Rho::Push.getDefault()</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetDeviceIdINSTANCE'/><div class=' method  js ruby android ios' id='mgetDeviceIdINSTANCE'><div class="signature d-flex"><div class="name">getDeviceId</div><div class='parameters'>(<span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mgetDeviceIdINSTANCE1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDeviceIdINSTANCE2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDeviceIdINSTANCE3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDeviceIdINSTANCE4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mgetDeviceIdINSTANCE6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-getDeviceIdINSTANCE'><div class="tab-pane fade active show" id="mgetDeviceIdINSTANCE1"><p>Returns push token used to identify particular device.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetDeviceIdINSTANCE2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetDeviceIdINSTANCE3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>STRING</span></strong></p><ul></ul></div></div><div class="tab-pane fade" id="mgetDeviceIdINSTANCE4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mgetDeviceIdINSTANCE6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getDeviceId(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.getDeviceId(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.getDeviceId(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperties'/><div class=' method  js ruby android ios' id='mgetProperties'><div class="signature d-flex"><div class="name">getProperties</div><div class='parameters'>(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mgetProperties1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperties2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperties3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperties4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-getProperties'><div class="tab-pane fade active show" id="mgetProperties1"><p>This method will return a set of object/value pairs for the list of the propertyName that is passed in. The propertyNames must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperties2"><div><p><strong>Parameters</strong></p><ul><li>arrayofNames : <span class='text-info'>ARRAY</span><p><p>List of properties I want to know about</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperties3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="mgetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>HASH : <p>Map of properties I want to know about</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.<ul><li> : <span class='text-info'>STRING</span><p> </p></li></ul></li></ul></div></div><div class="tab-pane fade" id="mgetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.getProperties(<span class="text-info">ARRAY</span> arrayofNames, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mgetProperty'/><div class=' method  js ruby android ios' id='mgetProperty'><div class="signature d-flex"><div class="name">getProperty</div><div class='parameters'>(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mgetProperty1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperty2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperty3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperty4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mgetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-getProperty'><div class="tab-pane fade active show" id="mgetProperty1"><p>This method will return the value of the propertyName that is passed in. The propertyName must be a valid property of the API class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mgetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The property to return info about.</p>
 </p></li><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-info'>Optional</span> </li></ul></div></div><div class="tab-pane fade" id="mgetProperty3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>STRING</span></strong></p><ul></ul></div></div><div class="tab-pane fade" id="mgetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>STRING : <p>The property to return info about.</p>
 : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mgetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.getProperty(<span class="text-info">STRING</span> propertyName, <span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetDefaultSTATIC'/><div class=' method  js ruby android ios' id='msetDefaultSTATIC'><div class="signature d-flex"><div class="name">setDefault</div><div class='parameters'>(<span class="text-info">SELF_INSTANCE: Rho::Push</span> defaultInstance)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msetDefaultSTATIC1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msetDefaultSTATIC2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msetDefaultSTATIC4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msetDefaultSTATIC6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-setDefaultSTATIC'><div class="tab-pane fade active show" id="msetDefaultSTATIC1"><p>This method allows you to set the attributes of the default object instance by passing in an object of the same class.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetDefaultSTATIC2"><div><p><strong>Parameters</strong></p><ul><li>defaultInstance : <span class='text-info'>SELF_INSTANCE: Rho::Push</span><p><p>An instance object that is of the same class.</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC3"></div><div class="tab-pane fade" id="msetDefaultSTATIC4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetDefaultSTATIC6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-book"></i>Class Method: This method can only be accessed via the API class object. <ul><li>JavaScript: <code>Rho.Push.setDefault(<span class="text-info">SELF_INSTANCE: Rho::Push</span> defaultInstance)</code> </li><li>Ruby: <code>Rho::Push.setDefault(<span class="text-info">SELF_INSTANCE: Rho::Push</span> defaultInstance)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperties'/><div class=' method  js ruby android ios' id='msetProperties'><div class="signature d-flex"><div class="name">setProperties</div><div class='parameters'>(<span class="text-info">HASH</span> propertyMap)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msetProperties1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperties2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperties4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperties6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-setProperties'><div class="tab-pane fade active show" id="msetProperties1"><p>This method will set the values of a list of properties for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperties2"><div><p><strong>Parameters</strong></p><ul><li>propertyMap : <span class='text-info'>HASH</span><p><p>Map of properties I want to set</p>
 </p></li><ul><li><i>Object<i> : <span class='text-info'>STRING</span><p> </p></li></ul></ul></div></div><div class="tab-pane fade" id="msetProperties3"></div><div class="tab-pane fade" id="msetProperties4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperties6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.setProperties(<span class="text-info">HASH</span> propertyMap)</code> </li><li>Ruby: <code>Rho::Push.setProperties(<span class="text-info">HASH</span> propertyMap)</code></li></ul></li></ul></div></div></div>  </div><a name ='msetProperty'/><div class=' method  js ruby android ios' id='msetProperty'><div class="signature d-flex"><div class="name">setProperty</div><div class='parameters'>(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#msetProperty1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperty2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperty4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#msetProperty6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-setProperty'><div class="tab-pane fade active show" id="msetProperty1"><p>This method will set the value of a property for the API class. The propertyName must be a valid property for the class and must also not be read only.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="msetProperty2"><div><p><strong>Parameters</strong></p><ul><li>propertyName : <span class='text-info'>STRING</span><p><p>The one property name that I want to set</p>
 </p></li><li>propertyValue : <span class='text-info'>STRING</span><p><p>The one property value that I want to set</p>
 </p></li></ul></div></div><div class="tab-pane fade" id="msetProperty3"></div><div class="tab-pane fade" id="msetProperty4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="msetProperty6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code> </li><li>Ruby: <code>Rho::Push.setProperty(<span class="text-info">STRING</span> propertyName, <span class="text-info">STRING</span> propertyValue)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstartNotificationsINSTANCE'/><div class=' method  js ruby android ios' id='mstartNotificationsINSTANCE'><div class="signature d-flex"><div class="name">startNotifications</div><div class='parameters'>(<span class='text-info'>CallBackHandler</span> callback)</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mstartNotificationsINSTANCE1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mstartNotificationsINSTANCE2" data-toggle="tab">Parameters</a></li><li  class='nav-item'><a class="nav-link" href="#mstartNotificationsINSTANCE3" data-toggle="tab">Callback</a></li><li  class='nav-item'><a class="nav-link" href="#mstartNotificationsINSTANCE4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mstartNotificationsINSTANCE6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-startNotificationsINSTANCE'><div class="tab-pane fade active show" id="mstartNotificationsINSTANCE1"><p>Start listening for push messages, errors or other push related events.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstartNotificationsINSTANCE2"><div><p><strong>Parameters</strong></p><ul><li>callback : <span class='text-info'>CallBackHandler</span> <span class='badge badge-warning'>Mandatory</span> </li></ul></div></div><div class="tab-pane fade" id="mstartNotificationsINSTANCE3"><div><p><strong>Async Callback Returning Parameters: <span class='text-info'>HASH</span></strong></p><ul><ul><li>doSync : <span class='text-info'>STRING</span><p><p>List of sources to sync separated by comma or &lsquo;all&rsquo;.</p>
 </p></li><li>alertText : <span class='text-info'>STRING</span><p><p>Alert message to show to user.</p>
 </p></li><li>vibrateDuration : <span class='text-info'>INTEGER</span><p><p>Vibrate duration in milliseconds.</p>
 </p></li><li>alertSound : <span class='text-info'>STRING</span><p><p>Path to sound file to play when push message is received.</p>
 </p></li></ul></ul></div></div><div class="tab-pane fade" id="mstartNotificationsINSTANCE4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void : this method also supports async callbacks - check the Callback tab for callback return parameters.</li></ul></div></div><div class="tab-pane fade" id="mstartNotificationsINSTANCE6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.startNotifications(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.startNotifications(<span class='text-info'>CallBackHandler</span> callback)</code> </li><li>Ruby: <code>Rho::Push.startNotifications(<span class='text-info'>CallBackHandler</span> callback)</code></li></ul></li></ul></div></div></div>  </div><a name ='mstopNotificationsINSTANCE'/><div class=' method  js ruby android ios' id='mstopNotificationsINSTANCE'><div class="signature d-flex"><div class="name">stopNotifications</div><div class='parameters'>()</div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#mstopNotificationsINSTANCE1" data-toggle="tab">Description</a></li><li  class='nav-item'><a class="nav-link" href="#mstopNotificationsINSTANCE4" data-toggle="tab">Return</a></li><li  class='nav-item'><a class="nav-link" href="#mstopNotificationsINSTANCE6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3' id='tc-stopNotificationsINSTANCE'><div class="tab-pane fade active show" id="mstopNotificationsINSTANCE1"><p>Stop listening push events.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"></p></div></p></div><div class="tab-pane fade" id="mstopNotificationsINSTANCE2"></div><div class="tab-pane fade" id="mstopNotificationsINSTANCE3"></div><div class="tab-pane fade" id="mstopNotificationsINSTANCE4"><div><p><strong>Synchronous Return:</strong></p><ul><li>Void</li></ul></div></div><div class="tab-pane fade" id="mstopNotificationsINSTANCE6"><div><p><strong>Method Access:</strong></p><ul><li><i class="icon-file"></i>Instance Method: This method can be accessed via an instance object of this class: <ul><li><code>myObject.stopNotifications()</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This method can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.stopNotifications()</code> </li><li>Ruby: <code>Rho::Push.stopNotifications()</code></li></ul></li></ul></div></div></div>  </div></div>
<a name='Properties'></a>
<h2>Properties</h2>

<a name='ppushAppName'></a><div class=' method  js ruby android ios' id='ppushAppName'><div class="signature d-flex"><div class="name">pushAppName</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#ppushAppName1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#ppushAppName6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-pushAppName'><div class="tab-pane fade active show" id="ppushAppName1"><p>Application name used by RhoConnect Push server to identify application.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppushAppName2"></div><div class="tab-pane fade" id="ppushAppName5"></div><div class="tab-pane fade" id="ppushAppName6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.pushAppName</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.pushAppName</code> </li><li>Ruby: <code>Rho::Push.pushAppName</code></li></ul></li></ul></div></div></div>  </div><a name='ppushServer'></a><div class=' method  js ruby android ios' id='ppushServer'><div class="signature d-flex"><div class="name">pushServer</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#ppushServer1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#ppushServer6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-pushServer'><div class="tab-pane fade active show" id="ppushServer1"><p>URL of RhoConnect Push server.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ppushServer2"></div><div class="tab-pane fade" id="ppushServer5"></div><div class="tab-pane fade" id="ppushServer6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.pushServer</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.pushServer</code> </li><li>Ruby: <code>Rho::Push.pushServer</code></li></ul></li></ul></div></div></div>  </div><a name='ptype'></a><div class=' method  js ruby android ios' id='ptype'><div class="signature d-flex"><div class="name">type</div><div class='return-values'> : <span class='text-info'>STRING</span> <span class='badge badge-dark'>Read Only</span> </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#ptype1" data-toggle="tab">Description</a></li><li class='nav-item'><a class="nav-link" href="#ptype5" data-toggle="tab">Values</a></li><li class='nav-item'><a class="nav-link" href="#ptype6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-type'><div class="tab-pane fade active show" id="ptype1"><p>Push engine type.</p>
<p><div><p><img src="/img/js.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="JavaScript"><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"><img src="/img/ios.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="iphone, ipod touch, ipad"><img src="/img/windowsmobile.png" style="height: 20px;padding-top: 8px" rel="tooltip" title="Windows Mobile, Windows CE, Windows Embedded"> </p></div></p></div><div class="tab-pane fade" id="ptype2"></div><div class="tab-pane fade" id="ptype5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.Push.PUSH_TYPE_RHOCONNECT (For Ruby use "::" for all "." when referencing constants)<br/> String: rhoconnect-push </dt><dd><p>RhoConnect push engine.</p>
</dt><dt>Constant: Rho.Push.PUSH_TYPE_NATIVE (For Ruby use "::" for all "." when referencing constants)<br/> String: native-push </dt><dd><p>Native push engine (like GCM on Android).</p>
</dt></dl></div><div class="tab-pane fade" id="ptype6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.type</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>JavaScript: <code>Rho.Push.type</code> </li><li>Ruby: <code>Rho::Push.type</code></li></ul></li></ul></div></div></div>  </div><a name='puserNotifyMode'></a><div class=' method  ruby android' id='puserNotifyMode'><div class="signature d-flex"><div class="name"><span class="text-error">userNotifyMode</span></div><div class='return-values'> : <span class='text-info'>STRING</span>  </div></div><ul class="nav nav-tabs"><li class='nav-item'><a class="nav-link active" href="#puserNotifyMode1" data-toggle="tab">Description</a></li><li  class='nav-item'><a  class="nav-link" href="#puserNotifyMode2" data-toggle="tab">Params</a></li><li class='nav-item'><a class="nav-link" href="#puserNotifyMode5" data-toggle="tab">Values</a></li><li class='nav-item'><a class="nav-link" href="#puserNotifyMode6" data-toggle="tab">Access</a></li></ul><div class='tab-content border border-top-0 p-3 mb-3' id='tc-userNotifyMode'><div class="tab-pane fade active show" id="puserNotifyMode1"><span class='badge badge-danger'>Deprecated</span> <p>UI notification mode. Use <code>Rho.Notification</code> instead.</p>
<p><div><p><img src="/img/ruby.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Ruby"><img src="/img/android.png" style="width: 20px;padding-top: 8px" rel="tooltip" title="Android"> </p></div></p></div><div class="tab-pane fade" id="puserNotifyMode2"><p><strong>Default:</strong> backgroundNotifications</p></div><div class="tab-pane fade" id="puserNotifyMode5"><p><strong>Possible Values</strong> (<span class='text-info'>STRING</span>):</p> <dt>Constant: Rho.Push.PUSH_NOTIFY_NONE (For Ruby use "::" for all "." when referencing constants)<br/> String: none </dt><dd><p>Do not notify user about received push messages.</p>
</dt><dt>Constant: Rho.Push.PUSH_NOTIFY_ALERTS (For Ruby use "::" for all "." when referencing constants)<br/> String: alert </dt><dd><p>Notify user with alerts inside of application UI only.</p>
</dt><dt>Constant: Rho.Push.PUSH_NOTIFY_NOTIFICATIONS (For Ruby use "::" for all "." when referencing constants)<br/> String: notification </dt><dd><p>Notify user using notification bar.</p>
</dt><dt>Constant: Rho.Push.PUSH_NOTIFY_NOTIFICATIONS_AND_ALERTS (For Ruby use "::" for all "." when referencing constants)<br/> String: backgroundNotifications </dt><dd><p>Notify user using notification bar if in background and with alerts in foreground.</p>
</dt></dl></div><div class="tab-pane fade" id="puserNotifyMode6"><div><p><strong>Property Access:</strong></p><ul><li><i class="icon-file"></i>Instance: This property can be accessed via an instance object of this class: <ul><li><code>myObject.userNotifyMode</code></li></ul></li><li><i class="icon-file"></i>Default Instance: This property can be accessed via the default instance object of this class. <ul><li>Ruby: <code>Rho::Push.userNotifyMode</code></li></ul></li></ul></div></div></div>  </div>
<a name='Examples'></a>
<h2>Examples</h2>

<a name='e0'></a><div class=' example' id='e0'><div class="accordion-group"><div class="accordion-heading"><span class="accordion-toggle"   href="#cExample0"><strong>Handle push message</strong></div><div id="cExample0" class="accordion-body">  <div class="accordion-inner">
<p>Start Push Notifications service and define alert popup window in push callback method.</p>
<ul class='nav nav-tabs' id='exI0-S0Tab'><li class="nav-item"><a class="nav-link active" href='#exI0-S0JS' data-toggle='tab'>JavaScript</a></li><li class="nav-item"><a class="nav-link " href='#exI0-S0RUBY' data-toggle='tab'>Ruby</a></li></ul><div class='tab-content border border-top-0 mb-3 p-3'><div class='tab-pane active show' id='exI0-S0JS'><pre class='CodeRay'><code>:::javascript

                                
function setupPush() {
  // Start listening for push messages. Parameter is an url to push_callback method
  Rho.Push.startNotifications(pushCallback);
}

function pushCallback(params) {
  // Show 'alert' popup window with push message text
  var propertyMap = {message: params["alert"], buttons: [{id: 'OK', title: 'OK'}]};
  Rho.Notification.showPopup(propertyMap);
}
                                
                            </code></pre></div><div class='tab-pane' id='exI0-S0RUBY'><pre class='CodeRay'><code>:::ruby

                                
def setup_push
  # Start listening for push messages. Parameter is an url to push_callback method
  Rho::Push.startNotifications(url_for(:action=&gt;:push_callback))
end


def push_callback
  # Show 'alert' popup window with push message text
  Rho::Notification.showPopup({'message' =&gt; @params['alert'], 'buttons' =&gt;['OK']})
end
                                
                            </code></pre></div></div>  </div></div></div></div></div>